manifest/objects/Apttus__TemplateClauseReferenceVersion__c.object
<CustomObject>
    <description>Holds Template Clause References for this version</description>
    <fields>
        <fullName>Apttus__ClauseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the clause in Template Clause Reference</description>
        <label>Clause</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Template Clause Reference Versions (Clause)</relationshipLabel>
        <relationshipName>VersionedClauseVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__ClauseReferenceId__c</fullName>
        <description>Clause reference id</description>
        <inlineHelpText>Clause reference id</inlineHelpText>
        <label>Clause Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ClauseVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to clause version id in Template Clause Reference</description>
        <inlineHelpText>Lookup to clause version id in Template Clause Reference</inlineHelpText>
        <label>Clause Version</label>
        <referenceTo>Apttus__TemplateVersion__c</referenceTo>
        <relationshipLabel>Template Clause Reference Versions (Clause Version)</relationshipLabel>
        <relationshipName>VersionedClauseVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__TemplateVersionId__c</fullName>
        <description>Master-detail to template version</description>
        <inlineHelpText>Master-detail to template version</inlineHelpText>
        <label>Template Version</label>
        <referenceTo>Apttus__TemplateVersion__c</referenceTo>
        <relationshipLabel>Template Clause Reference Versions (Template Version)</relationshipLabel>
        <relationshipName>ClauseReferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Template Clause Reference Version</label>
    <nameField>
        <label>Template Clause Reference Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Clause Reference Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>